<resources>
    <!-- General Text and Headings -->
    <string name="app_name">NE Architectural</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="launcher_logo">Launcher Logo</string>
    <string name="cancel">Cancel</string>
    <string name="location_heading">Location</string>
    <string name="search_icon">Magnifying glass/Search Icon</string>
    <string name="ok">OK</string>

    <!-- Navigation Drawer Related -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tags and Text -->
    <string name="wheelChair_accessibility_text">Wheelchair accessible</string>
    <string name="cheap_entry_text">Cheap entry</string>
    <string name="free_entry_text">No entry fee</string>
    <string name="child_friendly_text">Suitable for children</string>
    <string name="liked_locations_icon">Liked Locations Icon</string>
    <string name="wheelchair_accessible_icon">Wheelchair Accessible Icon</string>
    <string name="tag_selector_title">Select Tags</string>

    <!-- Map Page Text -->
    <string name="no_location_match_title">No Locations Shown</string>
    <string name="no_location_match_message">No locations were found. Either the internet connection was not strong enough to retrieve any locations, or your application-wide filters did not match any locations.</string>
    <string name="intro_message_title">Welcome to NE Architectural</string>
    <string name="intro_message_body">Tap on a Map Marker to see an information popup about the chosen location. Hold your finger on the map to zoom back out and see all Locations. Enjoy!</string>

    <!-- Location Page Text -->
    <string name="general_information">General Information</string>
    <string name="photos">Photo Gallery</string>
    <string name="take_me_here">Take me here!</string>
    <string name="like_button_text">I like this place</string>
    <string name="show_references">Show references</string>
    <string name="references">References</string>
    <string name="hide_references">Hide references</string>
    <string name="show_all_tags">Showing All Tags</string>
    <string name="all_tags_button">Show All Tags Button</string>
    <string name="reference_placeholder">No References To Display</string>
    <string name="location_thumbnail">Location Thumbnail</string>
    <string name="slideshow_text">%d/%d</string>
    <string name="architectural_information">Architectural Information</string>
    <string name="location_retrieve_error">Error retrieving location</string>
    <string name="report_retrieve_error">Error retrieving report</string>

    <!-- Slider related Text -->
    <string name="slider_max_distance">Showing locations over 10 %1$s</string>
    <string name="slider_distance">Showing locations within %1$d %2$s</string>
    <string name="slider_unset_text">Use slider to adjust maximum distance</string>
    <string name="slider_disabled">Please enable location for distance filtering</string>
    <string name="slider_enabled">Showing all Locations</string>

    <!-- Search Related -->
    <plurals name="search_results_count">
        <item quantity="one">1 Result</item>
        <item quantity="other">%d Results</item>
    </plurals>
    <string name="more_tags_icon">More Tags Icon</string>

    <!-- Settings Related -->
    <string name="gps_network_not_enabled_title">Location Services Not Enabled</string>
    <string name="gps_network_not_enabled">Location services are not enabled. Please enable your location services to use location features.</string>
    <string name="open_location_settings">Open Settings</string>
    <string name="location_enabled">Location Enabled</string>
    <string name="app_wide_filters">Application-wide Location Filters</string>
    <string name="select_tags">Select Tags</string>

    <!-- About Related -->
    <string name="about_ne_architectural">About NE Architectural</string>
    <string name="about_north_east">About the North East</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="about_header_image">About Header Image</string>
    <string name="ne_architectural_logo">NE Architectural logo</string>
    <string name="about_us_image">About Us Image</string>
    <string name="contact_text">\nIf you would like to get in touch with us, e-mail us at: nearchitecturalteam6@gmail.com</string>
    <string name="about_us_text"><![CDATA[We are a group of students from Newcastle University who have developed the app for Northumblerand County Council. The aim for the project was to produce an application which would highlight interesting areas from both Northumberland and Tyne & Wear, providing some educational material about the history and architecture of these locations, as well as act as a tourism companion for discovering these areas yourself.]]></string>
    <string name="about_north_east_text">The North East is home to Northumberland and Tyne and Wear, both of which have a rich history as is showcased by its many culturally, historically and architecturally significant buildings and monuments. Northumberland is the most northern county in England and won gold in ‘Best UK Holiday County/Destination’ in the prestigious 2018 British Travel Awards, whilst Tyne and Wear is brimming with cultural quayside cities and sandy North Sea beaches. You can use our app to navigate through the history of the North East, with many sites being within walking distance of Newcastle City Centre, and numerous others dotted around the area for if a day trip is in order.</string>
    <string name="about_ne_architectural_text"><![CDATA[NE Architectural is an app designed to showcase places of historical and architectural significance in and around the Northumberland and Tyne & Wear area. The app was designed to cater to the needs of any and all tourists, allowing visitors to the area to choose which locations are suited to their specific needs. Whether you wish to find out more about the area\'s local history, or plan a day out sightseeing, NE Architectural is your handy companion for discovering the North East!]]></string>
    <string name="council_logo_reference">The Northumberland County Council logo can be found at the following:\nUpload.wikimedia.org. n.d. [online] Available at: https://upload.wikimedia.org/wikipedia/commons/6/64/Coat_of_arms_of_Northumberland_County_Council.png.</string>

    <!-- Timeline Related -->
    <string name="timeline_start_icon">Timeline Start Icon</string>
    <string name="timeline_end_icon">Timeline End Icon</string>
    <string name="like_button">Like Button</string>
    <string name="oldest_to_newest">Oldest To Newest</string>
    <string name="apply_app_wide_filters">Filter</string>
    <string name="timeline_find_out_more">Tap a location on the timeline to find out more</string>
    <string name="find_out_more_button_text">Find out More</string>
    <string name="location_report_error">Error finding Location Report</string>
    <string name="no_locations_found">No locations found</string>
    <string name="location_slideshow_image">Location Slideshow Image</string>

    <!-- Help Related -->
    <string name="first_time_launch_button_text">Explore NE Architectural</string>
    <string name="help_guide_image">Help Guide Image</string>
    <string name="help_guide_menu_image">Help Guide Menu Image</string>
    <string name="return_button_text">Return</string>
    <string name="welcome">Welcome</string>

    <!-- Font Text -->
    <string name="font_size_string">Font Size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>

    <!-- Distance Text -->
    <string name="distance_unit">Distance Unit</string>
    <string name="kilometres">Kilometres</string>
    <string name="miles">Miles</string>

    <!-- Navigation Strings -->
    <string name="navigation_location_page">openLocationPage</string>
    <string name="navigation_open_fragment">openFragment</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_timeline">Timeline</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_location_details">Details</string>

    <!--Settings keys-->
    <string name="settings_file_key">com.nearchitectural.SETTINGS_FILE_KEY</string>
    <string name="settings_file_exists">com.nearchitectural.SETTINGS_EXISTS</string>
    <string name="settings_initial_opening">com.nearchitectural.SETTINGS_INITIAL_OPENING</string>
    <string name="settings_font_size">com.nearchitectural.SETTINGS_FONT_SIZE</string>
    <string name="settings_distance_unit">com.nearchitectural.SETTINGS_DISTANCE_UNIT</string>
    <string name="settings_active_tags">com.nearchitectural.SETTINGS_ACTIVE_TAGS</string>
    <string name="settings_liked_locations">com.nearchitectural.SETTINGS_LIKED_LOCATIONS</string>
    <string name="settings_location_permissions_granted">com.nearchitectural.SETTINGS_LOCATION_PERMISSIONS</string>
    <string name="settings_max_distance">com.nearchitectural.SETTINGS_MAX_DISTANCE</string>
    <string name="settings_max_distance_slider">com.nearchitectural.SETTINGS_MAX_DISTANCE_SLIDER</string>

</resources>
