<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/navigation_map" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline"
            android:title="@string/navigation_timeline" />

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_settings" />

        <item android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/navigation_about" />

        <item android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/navigation_help" />
    </group>
</menu>